
  - using 'label data' with horizontal bars now makes a lot more sense.

  - when you mouse over a data element now, that element's label will appear on screen while you hover the object - useful for finding a particular line or whatever that you want to apply a permanent label too.

V0.6
  - Fixed a but that made the logo appear blurry.

  - New tools splash screen


V0.5
  - Horizontal barcharts are now available.

  - Stacked barcharts are now available.

  - Fixed a bug that caused problems for axes with ranges <.01


V0.4
  - US recession shading and arbitrary shading can be found in Line/Scatter -> Line/Scatter style. I know, the UI looks terrible. You can only shade on the x-axis (is there a reason you'd want to shade on the y-axis?) To use the default US recession shading, your x-axis *must* be a date data type. For arbitrary shading, you can either specify number intervals (ie [3,4]) or date intervals (ie [01/01/1997,05/01/1997]). It recognizes all the same date formats that the data parser does.


V0.3:
  - You can now choose a custom height and width for you graph. You should generally stick to a width of 745 pixels as this is the width of columns on our website. Height can be anything though. Also of note - reducing the width won't do much for you. We currently lack the ability to flow text around an image, so you can't have a left-aligned graph with text around it. This feature is pretty experimental, see if you can break it maybe?

  - You can now have multiple trend lines on a graph - just press the '+' button to bring up another one. I know the interface is a bit of a mess right now - bear with me. By default they will all be labeled 'Trend Line' but you can right-click to delete these text elements. You can also now have vertical trend-lines by entering '-' as the slope and the desired  x-intercept as the intercept. As with other line elements, you can right-click a trend line  to make it dashed, thicker or thinner, or change the color.
